# paserverchoose

./: PKGBUILD  README  autogen.sh  bootstrap.sh  configure.ac  paserverchoose.yaml
src/: Makefile  Makefile.am  Makefile.in  avahibrowse.c  avahibrowse.h  padevchooser.c  paserverchoose.c  x11prop.h
